fix bug radio and checkbox on IE

--- a/web/eXoResources/src/main/webapp/skin/less/Form/Style.less
+++ b/web/eXoResources/src/main/webapp/skin/less/Form/Style.less
@@ -46,6 +46,7 @@ input[type="color"],
 	margin: 0 5px;
 }
 
+
 .uiCheckbox input[type="checkbox"]:checked,
 .uiCheckbox  input[type="checkbox"]:not(:checked) {
 	margin: 0;
@@ -55,8 +56,12 @@ input[type="color"],
 	position: absolute;
 	top: 0;
 	z-index: 100;
+	
 } 
-
+.uiCheckbox input {
+	margin-left: -18px e("\0/");
+	min-height: 10px e("\0/");
+}
 .uiCheckbox > span {
 	display: inline-block;
 	text-indent: 18px;
@@ -71,15 +76,15 @@ input[type="color"],
 	left: 4px;
 	position: absolute;
 	top: 4px;
-	transform: skewX(30deg) skewY(-35deg)/IE9;
-	left: 2px/IE9;
-	width: 10px/IE9;
-	height: 4px/IE9;
+	-ms-transform:skewX(30deg) skewY(-35deg) e("\9");//hack only ie9
+	left: 2px e("\9");
+	width: 10px e("\9");
+	height: 4px e("\9");
+	background: transparent e("\0/") ;//hack only ie8 
 }
 
 .uiCheckbox input[type="checkbox"] + span:before {
 	background: #d2d2d2;
-	background: #d2d2d2/IE8;
 	.border-radius(@borderRadiusSmall); 
 	.box-shadow(inset 0 1px 2px rgba(0,0,0,.17);
 	.square(12px);
@@ -87,6 +92,7 @@ input[type="color"],
 	left: 0px;
 	content: " ";
 	position: absolute;
+	background: transparent e("\0/");
 }
 
 input[type="radio"] + span {
@@ -120,7 +126,10 @@ input[disabled], select[disabled], textarea[disabled], input[readonly], select[r
 	top: 0;
 	z-index: 100;
 } 
-
+.uiRadio input {
+	margin-left: -8px e("\0/");
+	min-height: 10px e("\0/");
+}
 .uiRadio > span {
 	display: inline-block;
 	text-indent: 18px;
@@ -135,7 +144,8 @@ input[disabled], select[disabled], textarea[disabled], input[readonly], select[r
 	left: 2px;
 	position: absolute;
 	top: 6px;
-	left: 2px/IE9;
+	left: 2px e("\9");
+	background: transparent e("\0/");
 }
 
 .uiRadio input[type="radio"] + span:before {
@@ -147,6 +157,7 @@ input[disabled], select[disabled], textarea[disabled], input[readonly], select[r
 	left: 0px;
 	content: " ";
 	position: absolute;
+	background: transparent e("\0/");
 }
 
 .uiRadio input[type="radio"] + span {
